# ai-text-summarizer-tool

./: README.md
ai-text-summarizer-tool/: CMakeLists.txt  analyzer.py  main.py  requirements.txt  summarizer.py
ai-text-summarizer-tool/include/: analyzer.h  summarizer.h
ai-text-summarizer-tool/src/: analyzer.cpp  main.cpp  summarizer.cpp
ai-text-summarizer-tool/tests/: test_summarizer.cpp  test_tool.py
